Image stretching and small fixes
Fixed issue where main home image would stretch on horizontal phones. Added min-width of 200px to help. Made footer padding less.

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body{
     font-family: "JetBrains Mono", 'Courier New', Courier, monospace;
     overflow-x: hidden; /* Hide horizontal scrolling */
     background-color: white;
+    overflow-wrap: break-word;
 }
 
 .main-body{
@@ -27,6 +28,7 @@ body{
 .navbar{
     --bs-navbar-toggler-focus-width: 0rem;
     width: 100%;
+    /* height:7%; */
 }
     
 /* Fix really weird issue with bootstrap rows causing horiz scroll*/
@@ -45,8 +47,7 @@ body{
 
 .banner-bg img:hover{
     border-radius: 25%;
-    max-width: 80%;
-    max-height: 45vh;
+    transform: scale(1.10);
 }
 
 .banner-bg{
@@ -58,6 +59,7 @@ body{
     text-align: center;
     background-size: cover;
     background-attachment: fixed;
+    min-height: 200px;
 
     /* Background stuff */
     padding: 0 20%; 
@@ -74,7 +76,7 @@ body{
 }
 
 .banner-bg h2{
-    font-size: clamp(0.8rem, 10vw, 2rem);
+    font-size: clamp(1rem, 3vw, 3rem);
 }
 
 p, li, a, footer{
@@ -82,7 +84,7 @@ p, li, a, footer{
 }
 
 footer{
-    padding: 3%;
+    padding: 2%;
     color: white;
     text-align: center;
     background-size: cover;
@@ -93,14 +95,6 @@ footer{
 @media (max-width: 992px){
     .banner-bg{
         padding: 0% 10%;
-    }
-    
-    .banner-bg img{
-        width:50%;
-    }
-
-    .banner-bg img:hover{
-        width:52.5%;
     }
 }
 
